client/resources/index.css
html,body {
    height: 100%;
    display: flex;
    overflow: hidden;
    width: 100%;

}


#parent {
    flex: 1;              /* fills remaining vertical space */
    width: 100%;          /* full width */
     height: 100%;
   overflow: hidden;
}
h1 {
    color: var(--vscode-textLink-foreground);
    margin-top: 0;
}
.container {
    margin: 0 auto;
    display: flex;
    flex-direction: row;
    width:500px;
}
.terms_container{
  flex:1;
  overflow: hidden;
  display: flex;
}
.controlpanel{
  padding: 30px;
}
button {
    background-color: red;
    color: var(--vscode-button-foreground);
    border: none;
    padding: 8px 16px;
    margin: 5px;
    cursor: pointer;
    border-radius: 2px;
}
button:hover {
    background-color: var(--vscode-button-hoverBackground);
}
.message {
    margin-top: 20px;
    padding: 10px;
    background-color: var(--vscode-input-background);
    border-radius: 4px;
    border-color: red; 
}
#terminal{
  width: 200px;
  height: 200px;
  overflow: scroll;
}
.term_panel{
  display: flex;
  flex-direction: column;
     overflow: hidden;
  flex: 1;
  width: 100%;
     
}
.term_wrapper{
  display: flex;
  flex-direction: column;
  flex: 1;
  overflow: hidden;
}
.term_title_bar{
  display: flex;
  padding: 4px 8px;
  background-color: var(--vscode-titleBar-activeBackground, #2d2d30);
  color: var(--vscode-titleBar-activeForeground, #cccccc);
  border-bottom: 1px solid var(--vscode-panel-border, #3e3e42);
  font-size: 12px;
  gap: 8px;
  align-items: center;
  overflow: hidden;
  gap:12px;
}

.term_title_bar .title{
  margin-right: 10px;
  font-weight: bold;
}
.term_title_bar .value{
  margin-right: 10px;
}

.term_title_bar td div{
  display: flex;
}
.term_title_bar table{
  white-space: nowrap;
  border-collapse: collapse;
}
.term_title_bar tr td:first-child{
  font-weight: bold;
  text-align: right;
}
.term_title_bar tr td{

}
.term_title_dir .value,
.term_title_watch .value,
.term_title_script  .value{
  background-color: black;
  gap:10px;
}
.term_title_dir .value:hover,
  .term_title_script  .value:hover{
  text-decoration: underline;
  cursor: pointer;
}
.term_title_status.value{
  padding: 30px;
  border-radius: 3px;
  font-weight: 500;
  font-size: 11px;
  min-width: 60px;
  text-align: center;
}
.row_title_bar{
  display: flex;
  flex-direction: row;
}

span.term_title_watch{
  flex-basis: 100%;
}
.term_title_status{
  display: inline;
  padding: 2px;
  border-radius: 4px;
  min-width: 50px;
  text-align: center;
}
.term_title_status.status_ready{
  background-color: var(--vscode-button-secondaryBackground, #3c3c3c);
  color: var(--vscode-button-secondaryForeground, #cccccc);
}
.term_title_status.status_running{
  background-color:#0e639c;
  color:  #ffffff;
}
.term_title_status.status_stopped{
  background-color:#a20790;
  color:  #ffffff;
}
.term_title_status.status_ready{
  background-color:#0e639c;
  color:  #ffffff;
}
.term_title_status.status_done{
  background-color: #4caf50;
  color: #ffffff;
}
.term_title_status.status_error{
  background-color: #f44336;
  color: #ffffff;
}
@keyframes pulse {
  0%, 100% { opacity: 1; }
  50% { opacity: 0.7; }
}*/
.term_title_name{
  font-weight: 500;
}
.stats_container{
  overflow: scroll;
  width:300px;
  display: block;

 }
.stats{
  border-collapse: collapse;
  align-self: flex-start;
}
.term{
  flex:1;
  background-color: rgb(29, 55, 64);
   min-height: 0;
}
.stats td{
  border: 2px solid inherit;
  padding: 3px;
}
.stats td .value{
  color:#aa86c9;
}

.stats tr:hover {

}

.tree_folder{

}
.tree_item{

}
.label_row{
    padding: 1px;
    white-space: nowrap;
    display: flex;
    width: 1000px;
    align-items: center;
    position: relative;
}
.label_row:hover{
  background-color: var(--vscode-list-hoverBackground);
  cursor: pointer;

}
.label{
  margin-left:4px;
  

}
.shifter{
  display: flex;
  align-items: center;
  position: relative; 

}
.children{
}
.description{
  padding-left: 10px;
  color:var(--vscode-descriptionForeground);
}

.tree_folder.collapsed > .children {
  display: none;
}
.selected > .label_row{
  background-color: var(--vscode-list-activeSelectionBackground);
  color: var(--vscode-list-activeSelectionForeground);
}
.tree_folder.collapsed>.label_row>.shifter>::before {
  content: url('icons/chevron-right.svg');
  position: absolute;
  left: -20px;
  font-size: 12px;
  pointer-events: none;
  filter: invert(1);
}
.tree_folder:not(.collapsed)>.label_row>.shifter::before {
  content: url('icons/chevron-down.svg');
  position: absolute;
  left: -20px;
  font-size: 12px;
  pointer-events: none;
  filter: invert(1);

}
#the_tree{
  overflow: auto;
}
.commands_icons{
  margin-left: auto;
  display: none;
  flex-direction: row;
  position: sticky;
  right: 10px;
}
.term_title_bar .commands_icons{
  display: flex;  
  align-items: center;
  margin-left: 5px;  
}
.label_row:hover .commands_icons{
  display: flex;
}
.command_icon:hover{
  background-color:var(--vscode-toolbar-hoverBackground);
}
.command_icon > img {
  filter: invert(1);
}

.commands_icons  svg{
  width: 16px;
  height: 16px;
}
.toggles_icons  svg{
  width: 16px;
  height: 16px;
}
.label_row > .toggles_icons{
  position: absolute;
  min-width: 18px;
  height: 100%;
  border-right: 1px dotted darkgray;
}

/*.watched_true > .label_row #watched svg{
  color: darkorange;
}*/
.toggles_icons > .watched.true svg{
  color: darkorange;
}
.toggles_icons > .watched.false svg{
  color: gray;
}
.toggles_icons > .watched.false svg:hover{
  width: 16px;
  height: 16px;
  color: white;
}
.watched_undefined > .label_row path{
  fill:lightyellow
}


.icon{
  background-color: transparent;
  border-radius: 2px;
  border-radius: 3px;
  margin-right: 4px;
  margin: 0px;
  padding: 3px;  
}  

.icon svg{
  width: 16px;
  height: 16px;

}
.tree_checkbox {
  width: 16px;
  height: 16px;
  display: none;
  align-items: center;
  justify-content: center;
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 3px;
  position: absolute;
  left:10px;
  /* Official VS Code Colors */
  background: var(--vscode-checkbox-background);
  border: 1px solid var(--vscode-checkbox-border);
}
.chk_visible>.label_row>.tree_checkbox{
  display: flex;
}
.chk_visible.chk_different >.label_row>.tree_checkbox::before{
  content: "";
  position: absolute;
  left: -10px;
  top: -2px;
  bottom: -2px;
  width: 3px;
  background-color: var(--vscode-settings-modifiedItemIndicator);
}
/* Hover state */
.tree_checkbox:hover {
  background: var(--vscode-checkbox-background);
  border-color: var(--vscode-checkbox-border);
}

/* Active/Checked state logic */
.tree_checkbox.checked {
  background: var(--vscode-checkbox-background);
  border-color: var(--vscode-checkbox-border);
}

/* Style for the SVG checkmark inside */
.tree_checkbox svg {
  width: 14px;
  height: 14px;
  fill: var(--vscode-checkbox-foreground);
}
.done{
  background-color: green;
}

.running{
  background-color: darkorange;
  border: 0px solid #474747;  
  
}
.value.background_ready{
  background-color: blue;
  border: 0px solid #474747;  
}
.stopped{
  background-color:purple;
  border: 0px solid #474747;  
}
.error{
  background-color: red;
}
.icon.background_ready,.icon.background_folder{
  border: 0px solid #474747;  
}
.watched2 .label_row::before {
  content: url('icons/watched.svg');
  position: absolute;
  left: 0px;
  pointer-events: none;
}
.watched .label_row {

}
.rel{
  cursor: pointer;
  padding: 2px;
}
.rel:hover{
  background-color: yellow;
  color: black;
}
.term_title_duration {
  font-family: monospace;
}

.term_title_duration .ms {
  color: #888;        /* subtle gray */
  font-size: 0.9em;   /* optional */
}
.tag{
    margin-left     : 5px;
    margin-right    : 5px;
    padding-left    : 2px;
    padding-right   : 2px;
    background-color: #4d54e2;
    display         : inline;
    border          : 1px solid #440c8a;
    color           : black;
}
.toggles_icon{
    width: 16px;
}
.left_stats{
  min-width:200px;
}
.left_stats .title{
  font-weight: bold;
  text-align: center;  
}
.left_stats .description{
  text-align: center;  
}
.term_title_watch{
  display: flex;
  flex-direction: column;
}
.sep{
  color: #875eba;
}
.watching:has(.watched.true){
  color: white;
}
.watching:has(.watched.false){
  color: gray;
}
.term_title_bar table.watching tr td:first-child:has(.watched.true){
  color:darkorange;
}
.term_title_bar .icon.text{
   width:80px
}
.term_title_bar .term_title_duration{
     min-width:60px

}
.term{
    font-family: monospace;
    overflow: auto;
    counter-reset: line-number;
}
.line_stderr,.line_stdout {
  counter-increment: line-number;
  background-color: black; /* Moved here for a consistent background */
  white-space: pre;
  display: flex;
  min-width: fit-content;
}

.line_stderr::before,.line_stdout::before  {
  content: counter(line-number);
  color: #646362;
  /* background-color: #3c3c3c; */
  display: inline-block;
  position: sticky;
  left: 0;
  z-index: 1;
  background-color: black;
  
  /* Fixed width for the number area */
  width: 30px;
  flex-shrink: 0;
  text-align: right;
  
  /* The Red Gutter */
  border-right: 1px dotted #ffffff;
  
  /* REMOVE ALL GAPS */
  margin-right: 3px;
  padding-right: 5px;
  user-select: none;
}
.line_stderr::before{
  border-right: 2px solid red;  
  margin-right: 2px;
}
.eof::after{
  content: "<eof>";
  background-color:purple;
}
[data-source_file]:hover {
  text-decoration: underline;
  cursor: pointer;    
  font-weight:900;
}

.line span:hover{


}

